Fix overflow on heading, update with real data

--- a/src/scss/components/_pokerTable.scss
+++ b/src/scss/components/_pokerTable.scss
@@ -41,7 +41,9 @@
                 border-radius: 0 rem(10)  0 0 ;
                 text-align: right;
                 padding-right: rem(20);
-                
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
 
             th {
